<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Video Diary</string>

    <string name="action_settings">Settings</string>

    <!--splash-screen-->
    <string name="splash_welcome">WELCOME!</string>
    <string name="splash_app_name">TO VIDEO DIARY</string>
    <!--<string name="splash_name">Sign your name</string>
    <string name="splash_personal_name">Your Personal Name</string>
    <string name="splash_next">Next</string>
-->
    <!--menu activity-->
    <string name="menu_act_no_videos">No video records</string>
    <string name="menu_act_no_notes">No notes</string>
    <string name="menu_act_choice_image">Tap to choose picture</string>
    <string name="create_video_note">Create video note</string>
    <string name="edit_video_note">Edit video note</string>

    <string name="create_note">Create note</string>
    <string name="edit_note">Edit note</string>

    <string name="menu_search">Search</string>
    <string name="menu_record">Record</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_share">Share</string>
    <string name="menu_records">Video Notes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_me">Contacts</string>

    <!--fragment video -->
    <string name="create_title">Sign your video</string>
    <string name="description">Tell more about this video</string>

    <string name="tap_to_add_video_note">Tap to add video note</string>

    <string name="create_title_note">Sign your note</string>
    <string name="description_note">Tell more about this note</string>

    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="video_notes">@string/menu_notes</string>

    <string name="menu_no_record">No Video Records</string>
    <string name="menu_no_notes">No Notes</string>

    <string name="delete_item">Delete current note</string>

    <string name="select_image_gallery">Select picture from gallery</string>
    <string name="select_image_gallery_description">Select picture for make your menu more beautiful</string>

    <!--setting fragment-->
    <string name="frag_setting_title" translatable="false">Setting</string>

    <string name="share_text_video">"Share your video via:</string>
    <string name="share_text_note">"Share your thoughts via:</string>

    <string name="frag_avatar" translatable="false">Take picture from</string>
    <string name="frag_avatar_gallery" translatable="false">Gallery</string>
    <string name="frag_avatar_camera" translatable="false">Camera</string>

    <string name="support_project">Support project:</string>

    <string name="contact_me">Contact me:</string>
    <string name="contact_me_email" translatable="false">Email: </string>
    <string name="contact_me_linken_in" translatable="false">LinkenIn: </string>
    <string name="email" translatable="false">ernest.hyst@gmail.com</string>
    <string name="linken_in" translatable="false">https://www.linkedin.com/in/tarasmatolinets</string>

    <string name="error_play_video">Can\'t open current video file</string>

    <!--warnings-->
    <string name="fragment_video_not_recorded_warning">Video has not been recorded</string>
    <string name="error_picture">Please choose another picture</string>
    <string name="error" translatable="false">error message</string>
    <string name="error_format" translatable="false">error format</string>

    <string name="banner_ad_unit_id">ca-app-pub-6807003067438136/7737012204</string>
    <string name="test_device_id">3E1CF5AAC99D5581DB7383FBBC97682F</string>

    <string name="note_saved_successfully">Note saved successfully</string>
    <string name="note_edited_successfully">Note edited successfully</string>
    <string name="note_deleted_successfully">Note deleted successfully</string>


    <string name="video_note_saved_successfully">Video note saved successfully</string>
    <string name="video_note_edited_successfully">Video edited successfully</string>
    <string name="video_note_deleted_successfully">Video deleted successfully</string>

    <string name="delete_note_description">Are you sure you want to delete this note?</string>

</resources>
