<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">


    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag_avatar_gallery"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_normal"
        android:textStyle="normal"
        android:id="@+id/rbPhoto" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag_avatar_camera"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_normal"
        android:textStyle="normal"
        android:id="@+id/rbGallery" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edge_medium">

        <Button
            android:id="@+id/btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/dialog_cancel"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="normal"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_normal" />

        <Button
            android:id="@+id/btOkay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/dialog_ok"
            android:layout_weight="1"
            android:textColor="@color/blue"
            android:textStyle="normal"
            android:gravity="center"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>

</LinearLayout>
