<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_main"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:orientation="vertical">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edge_big"
        android:gravity="center_horizontal"
        android:text="@string/delete_item"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"
        android:textStyle="normal"/>


    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edge_medium"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_normal"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/bt_okay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_normal"
            android:textStyle="normal"/>
    </LinearLayout>

</LinearLayout>
