<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollCard"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llCard"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewCreateVideo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            card_view:cardCornerRadius="@dimen/edge_normal"
            android:layout_weight="0.7"
            android:layout_margin="@dimen/edge_above">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ivVideoThumbnail"
                    android:scaleType="centerCrop"
                    android:layout_margin="@dimen/edge_medium" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_cancel_grey"
                    android:visibility="gone"
                    android:id="@+id/ivCancel"
                    android:layout_margin="@dimen/edge_medium" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_play_arrow_white"
                    android:id="@+id/ivPlay"
                    android:visibility="gone"
                    android:layout_centerInParent="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tap_to_add_video_note"
                    android:drawableLeft="@drawable/ic_videocam_grey"
                    android:id="@+id/tvAddVideo"
                    android:textStyle="normal"
                    android:visibility="gone"
                    android:gravity="center"
                    android:drawablePadding="@dimen/edge_normal"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_medium"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/edge_medium"
            android:maxLines="3"
            android:textCursorDrawable="@drawable/keyboard_cursor_color"
            android:inputType="text|textMultiLine"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:hint="@string/create_title"
            android:layout_weight="0.1" />


        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/edge_medium"
            android:inputType="text|textMultiLine"
            android:textCursorDrawable="@drawable/keyboard_cursor_color"
            android:textSize="@dimen/text_mini_normal"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:hint="@string/description"
            android:layout_weight="0.2"
            android:gravity="top" />

    </LinearLayout>
</ScrollView>
